--- a/css/popup.css
+++ b/css/popup.css
@@ -5,7 +5,6 @@
 }
 
 html {
-    font-size: 62.5%;
     overflow: hidden;
     background: #eee;
     color: #1a1a1a;
@@ -16,16 +15,17 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    font-size: 0.6rem;
+    font-size: 11.5px;
+    padding: 10px;
 }
 
 .row {
-    width: calc(7rem * 3);
+    width: calc(75px * 3);
     display: block;
 }
 
 .control-wrap {
-    height: 7rem;
+    height: 75px;
     display: flex;
     flex-wrap: nowrap;
     align-content: stretch;
@@ -43,7 +43,7 @@ body {
 .btn-control {
     flex: 1;
     color: transparent;
-    background-size: 3rem;
+    background-size: 35px;
     background-position: center center;
     background-repeat: no-repeat;
     outline: 0;
@@ -74,12 +74,12 @@ body {
 .ripple-effect {
     position: absolute;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #000;
     user-select: none;
     pointer-events: none;
     padding: 0;
     margin: 0;
-    opacity: 0.6;
+    opacity: 0.3;
     transform: translate3d(-50%, -50%, 0);
 }
 
@@ -87,7 +87,6 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 15px 10px;
 }
 
 a {
