--- a/css/popup.css
+++ b/css/popup.css
@@ -83,13 +83,57 @@ body {
     transform: translate3d(-50%, -50%, 0);
 }
 
-.info-wrap {
+.info-wrap,
+.song-wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 15px;
 }
 
+.song-wrap .song {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-break: normal;
+}
+
 a {
     color: inherit;
+}
+
+main {
+    position: relative;
+    z-index: 1;
+}
+
+.pop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    visibility: collapse;
+    opacity: 0;
+    transition: .25s;
+    z-index: 1001;
+}
+
+.pop.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+.error {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 16px;
+}
+
+.error .wrap {
+    vertical-align: middle;
+    text-align: center;
 }
