--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -43,26 +43,9 @@ body {
 .btn-control {
     flex: 1;
     color: transparent;
-    background-size: 40px;
-    background-position: center center;
-    background-repeat: no-repeat;
     outline: 0;
-}
-
-.btn-prev {
-    background-image: url(../svg/prev.svg);
-}
-
-.btn-next {
-    background-image: url(../svg/next.svg);
-}
-
-.btn-pause {
-    background-image: url(../svg/pause.svg);
-}
-
-.btn-pause.is-play {
-    background-image: url(../svg/play.svg);
+    height: 100%;
+    position: relative;
 }
 
 .ripple {
@@ -96,6 +79,16 @@ body {
     white-space: nowrap;
     text-overflow: ellipsis;
     word-break: normal;
+}
+
+.link-author {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-break: normal;
+    max-width: 55px;
+    display: inline-block;
+    vertical-align: bottom;
 }
 
 a {
@@ -136,4 +129,56 @@ main {
 .error .wrap {
     vertical-align: middle;
     text-align: center;
+}
+
+.icon {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    text-indent: 101%;
+    white-space: nowrap;
+}
+
+.icon-prev {
+    background-image: url(../svg/prev.svg);
+}
+
+.icon-next {
+    background-image: url(../svg/next.svg);
+}
+
+.icon-pause {
+    background-image: url(../svg/pause.svg);
+}
+
+.icon-play {
+    background-image: url(../svg/play.svg);
+}
+
+.btn-control .icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-size: 25px;
+}
+
+.btn-pause .icon-play {
+    opacity: 0;
+    transition: .25s;
+}
+
+.btn-pause .icon-pause {
+    opacity: 1;
+    transition: .25s;
+}
+
+.btn-pause.is-play .icon-play {
+    opacity: 1;
+}
+
+.btn-pause.is-play .icon-pause {
+    opacity: 0;
 }
