--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -8,6 +8,8 @@ html {
     overflow: hidden;
     background: #eee;
     color: #1a1a1a;
+    width: 100%;
+    height: 100%;
 }
 
 body {
@@ -38,6 +40,8 @@ body {
     border: none;
     text-align: center;
     cursor: pointer;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .btn-control {
@@ -86,7 +90,6 @@ body {
     white-space: nowrap;
     text-overflow: ellipsis;
     word-break: normal;
-    max-width: 55px;
     display: inline-block;
     vertical-align: bottom;
 }
